force-app/main/default/objects/Payslip__c/Payslip__c.object-meta.xml
<CustomObject>
    <label>Payslip</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Payslip ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslip</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>