force-app/main/default/objects/Payslip__c/fields/AdjustOTHour__c.field-meta.xml
<CustomField>
    <fullName>AdjustOTHour__c</fullName>
    <inlineHelpText>Adjust Taxable OT (Hour): If Taxable Taxable OT (Hour) of an employee is 190, but actual it is 180, input -10</inlineHelpText>
    <label>Adjust OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>