force-app/main/default/objects/Payslip__c/fields/AdjustSalaryforNextPayslip__c.field-meta.xml
<CustomField>
    <fullName>AdjustSalaryforNextPayslip__c</fullName>
    <label>Adjust Salary for Next Payslip</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>