force-app/main/default/objects/Payslip__c/fields/AdjustSalaryfromLastPayslip__c.field-meta.xml
<CustomField>
    <fullName>AdjustSalaryfromLastPayslip__c</fullName>
    <formula>LastPayslip__r.AdjustSalaryforNextPayslip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjust Salary from Last Payslip</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>