force-app/main/default/objects/Payslip__c/fields/AdjustWorkDay__c.field-meta.xml
<CustomField>
    <fullName>AdjustWorkDay__c</fullName>
    <inlineHelpText>Adjust Taxable Work Day: If Taxable Work Day of an employee is 20, but actual it is 19, input -1</inlineHelpText>
    <label>Adjust Work Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>