force-app/main/default/objects/Payslip__c/fields/AnnualLeaves__c.field-meta.xml
<CustomField>
    <fullName>AnnualLeaves__c</fullName>
    <formula>Work_cycle__r.AnnualLeaveUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leaves</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>