force-app/main/default/objects/Payslip__c/fields/ApprenticeshipAllowanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeshipAllowanceAmount__c</fullName>
    <label>Apprenticeship Allowance Amount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>