force-app/main/default/objects/Payslip__c/fields/ApprenticeshipProcess__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeshipProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apprenticeship Process</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee_Process__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Promotion Process</value>
        </filterItems>
        <filterItems>
            <field>$Source.Employee__c</field>
            <operation>equals</operation>
            <valueField>Employee_Process__c.Employeename__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee_Process__c</referenceTo>
    <relationshipLabel>Payslip</relationshipLabel>
    <relationshipName>Payslip</relationshipName>
    <type>Lookup</type>
</CustomField>