force-app/main/default/objects/Payslip__c/fields/BasicSalary__c.field-meta.xml
<CustomField>
    <fullName>BasicSalary__c</fullName>
    <label>Basic Salary</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>