force-app/main/default/objects/Payslip__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <inlineHelpText>All of Cash Bonuses have not been settle and received in Monthly Payslip</inlineHelpText>
    <label>Bonus Amount</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>