force-app/main/default/objects/Payslip__c/fields/ComparetoLastPayslip__c.field-meta.xml
<CustomField>
    <fullName>ComparetoLastPayslip__c</fullName>
    <formula>If ( NetIncome__c -  LastPayslip__r.NetIncome__c &gt; 0, &quot;Higher&quot;, If (NetIncome__c -  LastPayslip__r.NetIncome__c &lt; 0, &quot;Lower&quot;, &quot;Equal&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare to Last Payslip</label>
    <type>Text</type>
</CustomField>