force-app/main/default/objects/Payslip__c/fields/DeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>DeductionAmount__c</fullName>
    <formula>NumberofDependents__c *  StandardDependentDeductionperPerson__c  +  StandardSelfDeduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Deduction = Standard Self Deduction + (Number of Dependents * Standard Dependent Deduction per Person)</inlineHelpText>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>