force-app/main/default/objects/Payslip__c/fields/DifferentAmount__c.field-meta.xml
<CustomField>
    <fullName>DifferentAmount__c</fullName>
    <formula>Abs ( NetIncome__c -  LastPayslip__r.NetIncome__c )/   LastPayslip__r.NetIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>