force-app/main/default/objects/Payslip__c/fields/GrossIncome__c.field-meta.xml
<CustomField>
    <fullName>GrossIncome__c</fullName>
    <formula>SalaryTaxableWorkDay__c + Bonus__c + TaxableAllowances__c  -  WithholdingViolation__c +  SalaryTaxableOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Income = Salary by Taxable Work Day + Salary by Taxable OT (Hour) + Taxable Allowances +/- Adjust Salary from Last Payslip + Bonus Amount - Withholding by Violation</inlineHelpText>
    <label>Gross Income</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>