force-app/main/default/objects/Payslip__c/fields/GrossSalary__c.field-meta.xml
<CustomField>
    <fullName>GrossSalary__c</fullName>
    <formula>BasicSalary__c +  ProductivitySalary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Salary = Basic Salary + Productivity Salary</inlineHelpText>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>