force-app/main/default/objects/Payslip__c/fields/HealthInsurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>HealthInsurancePercentage__c</fullName>
    <label>Health Insurance Percentage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>