force-app/main/default/objects/Payslip__c/fields/HolidayLeave__c.field-meta.xml
<CustomField>
    <fullName>HolidayLeave__c</fullName>
    <formula>Payroll__r.Holiday__c -  Work_cycle__r.Holiday_Attendance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All holiday leaves in a month that have excluded weekend plus work day on holiday</inlineHelpText>
    <label>Holiday Leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>