force-app/main/default/objects/Payslip__c/fields/IncomeAfterTaxes__c.field-meta.xml
<CustomField>
    <fullName>IncomeAfterTaxes__c</fullName>
    <formula>GrossIncome__c -  WithholdingAllCompulsoryInsurance__c - PITAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Income After Taxes = Gross Income - Withholding All Compulsory Insurance - PIT Amount</inlineHelpText>
    <label>Income After Taxes</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>