force-app/main/default/objects/Payslip__c/fields/LastPayslip__c.field-meta.xml
<CustomField>
    <fullName>LastPayslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Payslip</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Employee__c</field>
            <operation>equals</operation>
            <valueField>Payslip__c.Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payslip__c</referenceTo>
    <relationshipLabel>Payslip</relationshipLabel>
    <relationshipName>Payslip</relationshipName>
    <type>Lookup</type>
</CustomField>