force-app/main/default/objects/Payslip__c/fields/Manager_Approved_WC__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved_WC__c</fullName>
    <formula>Work_cycle__r.Manager_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Approved WC</label>
    <type>Checkbox</type>
</CustomField>