force-app/main/default/objects/Payslip__c/fields/NetIncome__c.field-meta.xml
<CustomField>
    <fullName>NetIncome__c</fullName>
    <formula>(GrossIncome__c -   BasicSalary__c *(HealthInsurancePercentage__c +  UnemploymentInsurancePercentage__c +  Social_Insurance_Percentage__c ) -  PITAmount__c)  - SalaryAdvanceAmount__c +  SalaryTaxfreeWorkDay__c +  SalaryTaxfreeOTHour__c +  TaxfreeAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Income = Income After Tax + Salary by Tax-free OT (Hour) + Salary by Tax-free Work Day + Apprenticeship Allowance Amount + Tax-free Allowance - Salary Advance Amount</inlineHelpText>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>