force-app/main/default/objects/Payslip__c/fields/NumberofDependents__c.field-meta.xml
<CustomField>
    <fullName>NumberofDependents__c</fullName>
    <label>Number of Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>