force-app/main/default/objects/Payslip__c/fields/OTHour__c.field-meta.xml
<CustomField>
    <fullName>OTHour__c</fullName>
    <formula>Work_cycle__r.HolidayOTHour__c +  Work_cycle__r.WeekendOTHour__c +  Work_cycle__r.BusinessDayOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>