force-app/main/default/objects/Payslip__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll</label>
    <referenceTo>Payroll__c</referenceTo>
    <relationshipLabel>Payslip</relationshipLabel>
    <relationshipName>Payslip</relationshipName>
    <type>Lookup</type>
</CustomField>