force-app/main/default/objects/Payslip__c/fields/Personal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Personal_Tax__c</fullName>
    <label>PIT (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>