force-app/main/default/objects/Payslip__c/fields/PITAmount__c.field-meta.xml
<CustomField>
    <fullName>PITAmount__c</fullName>
    <label>PIT Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>