force-app/main/default/objects/Payslip__c/fields/PrivilegeLeave__c.field-meta.xml
<CustomField>
    <fullName>PrivilegeLeave__c</fullName>
    <formula>Work_cycle__r.PrivilegeLeaveUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Privilege Leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>