force-app/main/default/objects/Payslip__c/fields/ProductivitySalary__c.field-meta.xml
<CustomField>
    <fullName>ProductivitySalary__c</fullName>
    <label>Productivity Salary</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>