force-app/main/default/objects/Payslip__c/fields/ReasonofRejection__c.field-meta.xml
<CustomField>
    <fullName>ReasonofRejection__c</fullName>
    <label>Reason of Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Cycle</fullName>
            </value>
            <value>
                <fullName>Payslip</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>