force-app/main/default/objects/Payslip__c/fields/SalaryAdvanceAmount__c.field-meta.xml
<CustomField>
    <fullName>SalaryAdvanceAmount__c</fullName>
    <label>Salary Advance Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>