force-app/main/default/objects/Payslip__c/fields/Salarycycle__c.field-meta.xml
<CustomField>
    <fullName>Salarycycle__c</fullName>
    <formula>text( Work_cycle__r.Cycle__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Cycle</label>
    <type>Text</type>
</CustomField>