force-app/main/default/objects/Payslip__c/fields/SalaryRateperHour__c.field-meta.xml
<CustomField>
    <fullName>SalaryRateperHour__c</fullName>
    <formula>(BasicSalary__c +  ProductivitySalary__c)  /  StandardWorkDay__c  / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Rate (per Hour)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>