force-app/main/default/objects/Payslip__c/fields/SalaryTaxableOTHour__c.field-meta.xml
<CustomField>
    <fullName>SalaryTaxableOTHour__c</fullName>
    <description>Salary by Taxable OT (Hour) = Taxable OT (Hour) * Salary Rate (per Hour)</description>
    <formula>TaxableOTHour__c  *    SalaryRateperHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary by Taxable OT (Hour)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>