force-app/main/default/objects/Payslip__c/fields/SalaryTaxableWorkDay__c.field-meta.xml
<CustomField>
    <fullName>SalaryTaxableWorkDay__c</fullName>
    <formula>( (BasicSalary__c +  ProductivitySalary__c ) /  StandardWorkDay__c  ) *  TaxableWorkDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary by Taxable Work Day = Gross Salary / Standard Work Day * Taxable Work Day</inlineHelpText>
    <label>Salary by Taxable Work Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>