force-app/main/default/objects/Payslip__c/fields/SalaryTaxfreeOTHour__c.field-meta.xml
<CustomField>
    <fullName>SalaryTaxfreeOTHour__c</fullName>
    <formula>TaxfreeOTHour__c *  SalaryRateperHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary by Tax-free OT (Hour) = Tax-free OT (Hour) * Salary Rate (per Hour)</inlineHelpText>
    <label>Salary by Tax-free OT (Hour)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>