force-app/main/default/objects/Payslip__c/fields/SalaryTaxfreeWorkDay__c.field-meta.xml
<CustomField>
    <fullName>SalaryTaxfreeWorkDay__c</fullName>
    <formula>TaxfreeWorkDay__c *  ((BasicSalary__c +  ProductivitySalary__c ) /  StandardWorkDay__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary by Tax-free Work Day = Tax-free Work Day * (Gross Salary / Standard Work Day)</inlineHelpText>
    <label>Salary by Tax-free Work Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>