force-app/main/default/objects/Payslip__c/fields/Social_Insurance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Social_Insurance_Percentage__c</fullName>
    <label>Social Insurance Percentage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>