force-app/main/default/objects/Payslip__c/fields/SpecialEmployee__c.field-meta.xml
<CustomField>
    <fullName>SpecialEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify Special Employee. When being checked, Taxable Work Day will equal Standard Work Day</description>
    <label>Special Employee</label>
    <type>Checkbox</type>
</CustomField>