force-app/main/default/objects/Payslip__c/fields/StandardSelfDeduction__c.field-meta.xml
<CustomField>
    <fullName>StandardSelfDeduction__c</fullName>
    <label>Standard Self Deduction</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>