force-app/main/default/objects/Payslip__c/fields/StandardWorkDay__c.field-meta.xml
<CustomField>
    <fullName>StandardWorkDay__c</fullName>
    <inlineHelpText>Standard work days in a month that have excluded weekend and holiday</inlineHelpText>
    <label>Standard Work Day</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>