force-app/main/default/objects/Payslip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Sent to Employee</fullName>
            </value>
            <value>
                <fullName>Employee Approved</fullName>
            </value>
            <value>
                <fullName>Employee Rejected</fullName>
            </value>
            <value>
                <fullName>HR Approved</fullName>
            </value>
            <value>
                <fullName>Waiting for Manager Confirm</fullName>
                <isActive>false</isActive>
                <label>Waiting for Manager Confirm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>