force-app/main/default/objects/Payslip__c/fields/TaxableAllowances__c.field-meta.xml
<CustomField>
    <fullName>TaxableAllowances__c</fullName>
    <inlineHelpText>Sum of all Taxable Allowances in Salary Policy</inlineHelpText>
    <label>Taxable Allowances</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>