force-app/main/default/objects/Payslip__c/fields/Taxableincome__c.field-meta.xml
<CustomField>
    <fullName>Taxableincome__c</fullName>
    <formula>Max(
GrossIncome__c - DeductionAmount__c -   BasicSalary__c * ( HealthInsurancePercentage__c +  Social_Insurance_Percentage__c +  UnemploymentInsurancePercentage__c ) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Income</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>