force-app/main/default/objects/Payslip__c/fields/TaxableOTHour__c.field-meta.xml
<CustomField>
    <fullName>TaxableOTHour__c</fullName>
    <formula>OTHour__c  +  AdjustOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxable OT (Hour) = OT (Hour) + Adjust OT (Hour)</inlineHelpText>
    <label>Taxable OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>