force-app/main/default/objects/Payslip__c/fields/TaxableWorkDay__c.field-meta.xml
<CustomField>
    <fullName>TaxableWorkDay__c</fullName>
    <formula>IF (  SpecialEmployee__c ,   StandardWorkDay__c  ,  WorkDay__c  +  AnnualLeaves__c + AdjustWorkDay__c  +  PrivilegeLeave__c +  HolidayLeave__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxable Work Day = Work Day + Annual Leaves + Privilege Leave + Holiday Leave + Adjust Work Day</inlineHelpText>
    <label>Taxable Work Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>