force-app/main/default/objects/Payslip__c/fields/TaxfreeAllowance__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeAllowance__c</fullName>
    <inlineHelpText>Sum of all Tax-free Allowances in Salary Policy</inlineHelpText>
    <label>Tax-free Allowance</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>