force-app/main/default/objects/Payslip__c/fields/TaxfreeOTHour__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeOTHour__c</fullName>
    <formula>Work_cycle__r.TaxfreeOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax-free OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>