force-app/main/default/objects/Payslip__c/fields/TaxfreeWorkDay__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeWorkDay__c</fullName>
    <formula>Work_cycle__r.TaxfreeWorkDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax-free Work Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>