force-app/main/default/objects/Payslip__c/fields/UnemploymentInsurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentInsurancePercentage__c</fullName>
    <label>Unemployment Insurance Percentage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>