force-app/main/default/objects/Payslip__c/fields/WithholdingAllCompulsoryInsurance__c.field-meta.xml
<CustomField>
    <fullName>WithholdingAllCompulsoryInsurance__c</fullName>
    <formula>BasicSalary__c * ( HealthInsurancePercentage__c +  Social_Insurance_Percentage__c +  UnemploymentInsurancePercentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding All Compulsory Insurance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>