force-app/main/default/objects/Payslip__c/fields/WithholdingCompulsoryHealthInsurance__c.field-meta.xml
<CustomField>
    <fullName>WithholdingCompulsoryHealthInsurance__c</fullName>
    <formula>BasicSalary__c  *  HealthInsurancePercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding Compulsory Health Insurance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>