force-app/main/default/objects/Payslip__c/fields/WithholdingCompulsorySocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>WithholdingCompulsorySocialInsurance__c</fullName>
    <formula>BasicSalary__c  *  Social_Insurance_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding Compulsory Social Insurance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>