force-app/main/default/objects/Payslip__c/fields/WithholdingCompulsoryUnemployedIns__c.field-meta.xml
<CustomField>
    <fullName>WithholdingCompulsoryUnemployedIns__c</fullName>
    <formula>BasicSalary__c  *  UnemploymentInsurancePercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding Compulsory Unemployed Ins</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>