force-app/main/default/objects/Payslip__c/fields/WithholdingViolation__c.field-meta.xml
<CustomField>
    <fullName>WithholdingViolation__c</fullName>
    <label>Withholding by Violation</label>
    <precision>12</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>