force-app/main/default/objects/Payslip__c/fields/Work_cycle__c.field-meta.xml
<CustomField>
    <fullName>Work_cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work cycle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Employee__c</field>
            <operation>equals</operation>
            <valueField>WorkCycle__c.Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkCycle__c</referenceTo>
    <relationshipLabel>Payslip</relationshipLabel>
    <relationshipName>Payslip</relationshipName>
    <type>Lookup</type>
</CustomField>