force-app/main/default/objects/Payslip__c/fields/WorkCycleStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkCycleStatus__c</fullName>
    <formula>Text( Work_cycle__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Cycle Status</label>
    <type>Text</type>
</CustomField>