force-app/main/default/objects/Payslip__c/fields/WorkDay__c.field-meta.xml
<CustomField>
    <fullName>WorkDay__c</fullName>
    <formula>Work_cycle__r.WorkDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>