force-app/main/default/objects/Payslip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Work_cycle__c</columns>
    <columns>Salarycycle__c</columns>
    <columns>Year__c</columns>
    <columns>TaxableWorkDay__c</columns>
    <columns>GrossIncome__c</columns>
    <columns>PITAmount__c</columns>
    <columns>IncomeAfterTaxes__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>