force-app/main/default/objects/Payslip__c/listViews/TCL_HR_for_Employee_Process_and_Salary_Payslip.listView-meta.xml
<ListView>
    <fullName>TCL_HR_for_Employee_Process_and_Salary_Payslip</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - HR for Employee Process and Salary</label>
    <queue>TCL_HR_for_Employee_Process_and_Salary</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>